force-app/main/default/objects/Event__c/fields/DetailedDescription__c.field-meta.xml
<CustomField>
    <fullName>DetailedDescription__c</fullName>
    <inlineHelpText>Detailed Description about the event</inlineHelpText>
    <label>Detailed Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>