force-app/main/default/objects/Event__c/fields/EarlybirdActive__c.field-meta.xml
<CustomField>
    <fullName>EarlybirdActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked the early bird price will be displayed to the user.</description>
    <inlineHelpText>If checked the early bird price will be displayed to the user.</inlineHelpText>
    <label>Earlybird Active?</label>
    <type>Checkbox</type>
</CustomField>