force-app/main/default/objects/Event__c/fields/EarlybirdTicketPrice__c.field-meta.xml
<CustomField>
    <fullName>EarlybirdTicketPrice__c</fullName>
    <inlineHelpText>The early bird ticket price</inlineHelpText>
    <label>Earlybird Ticket Price</label>
    <precision>15</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>