force-app/main/default/objects/Event__c/fields/InvoiceEmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>InvoiceEmailTemplateName__c</fullName>
    <inlineHelpText>The email template which will be used to send the Invoice PDF and Payment Link to the Customer.</inlineHelpText>
    <label>Invoice Email Template Name</label>
    <length>220</length>
    <type>Text</type>
</CustomField>