force-app/main/default/objects/Event__c/fields/InvoicePrefix__c.field-meta.xml
<CustomField>
    <fullName>InvoicePrefix__c</fullName>
    <inlineHelpText>The prefix for the invoice which will be used when the invoice is created for this event</inlineHelpText>
    <label>Invoice Prefix</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>