force-app/main/default/objects/Event__c/fields/LogoUrl__c.field-meta.xml
<CustomField>
    <fullName>LogoUrl__c</fullName>
    <inlineHelpText>The URL of the Logo to be displayed on Invoice.</inlineHelpText>
    <label>Logo Url</label>
    <type>Url</type>
</CustomField>