force-app/main/default/objects/Event__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <inlineHelpText>The support phone no that will be displayed on invoices</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>