force-app/main/default/objects/Event__c/fields/ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortDescription__c</fullName>
    <inlineHelpText>Short description about the event!</inlineHelpText>
    <label>Short Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>