force-app/main/default/objects/Event__c/fields/TicketEmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>TicketEmailTemplateName__c</fullName>
    <inlineHelpText>Contains the name of the email template which will be used to send the ticket conformation to the attendees!</inlineHelpText>
    <label>Ticket Email Template Name</label>
    <length>220</length>
    <type>Text</type>
</CustomField>