force-app/main/default/objects/Event__c/fields/TicketPrefix__c.field-meta.xml
<CustomField>
    <fullName>TicketPrefix__c</fullName>
    <inlineHelpText>The value which will be added as the prefix in the ticket id while generating the ticket.</inlineHelpText>
    <label>Ticket Prefix</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>