force-app/main/default/objects/Event__c/fields/TicketPrice__c.field-meta.xml
<CustomField>
    <fullName>TicketPrice__c</fullName>
    <inlineHelpText>The original ticket price</inlineHelpText>
    <label>Ticket Price</label>
    <precision>15</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>