force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Location__c</columns>
    <columns>ShortDescription__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>